name:                apn
version:             0.1.0.0
synopsis:            Send push notifications to Apple devices
description:
    apn is a library and command line utility that can be used to send
    push notifications to apple devices. Push notifications are small
    messages that can be sent to apps on smart phones and tablets
    without the need of a long lived TCP connection per app.
homepage:            https://github.com/memrange/apn#readme
license:             BSD3
license-file:        LICENSE
author:              Hans-Christian Esperer
maintainer:          hc@hcesperer.org
copyright:           2017 Hans-Christian Esperer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     APN
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , base64-bytestring
                     , binary
                     , bytestring
                     , containers
                     , cryptonite
                     , data-default
                     , http2
                     , http2-client
                     , random
                     , resource-pool
                     , text
                     , time
                     , tls
                     , x509
                     , x509-store

  default-language:    Haskell2010

executable apn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , apn
                     , bytestring
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite apn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , apn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hce/apn
